# UniThrift_Frontend

./: README.md  admin_analytics.html  admin_analytics.js  admin_app.js  admin_login.html  admin_login.js  admin_otp_verification.html  admin_otp_verification_script.js  admin_reset_password.html  admin_reset_password_mail.html  admin_reset_password_mail_script.js  admin_reset_password_script.js  admin_send_email_script.js  admin_send_email_verification.html  admin_signin.html  adminstyles.css  all_listings.html  all_listings.js  all_students.html  all_students.js  app.js  available_listings.css  available_listings.html  available_listings.js  category_management.css  category_management.html  category_management.js  contributions.md  create_listing.css  create_listing.html  create_listing.js  get_interested_listings.css  get_interested_listings.html  get_interested_listings.js  get_interested_listings_seller.css  get_interested_listings_seller.html  get_interested_listings_seller.js  index.html  interested_items.css  interested_items.html  (+35 more)
UniThrift_Backend/: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  report.html  requirements.txt  test.py
UniThrift_Backend/app/: main.py
UniThrift_Backend/app/response_schemas/: schema.py
UniThrift_Backend/app/server/config/: config.py
UniThrift_Backend/app/server/database/: core_data.py  db.py
UniThrift_Backend/app/server/document/: meta_data.py
UniThrift_Backend/app/server/encoder/: json_encoder.py
UniThrift_Backend/app/server/handler/: error_handler.py
UniThrift_Backend/app/server/http_client/: http_client.py
UniThrift_Backend/app/server/logger/: custom_logger.py
UniThrift_Backend/app/server/middlewares/: exceptions.py  headers.py  request_gzip.py  tracker.py
UniThrift_Backend/app/server/models/: auth.py  core_data.py  custom_types.py  generic.py  item_categories.py  listing.py  model_validators.py  password.py  (+3 more)
UniThrift_Backend/docs/: branching_tagging_technique.md  file_storage_flow.wsd  github_tags.md  github_workflow.md  licenses.md  performance.md
UniThrift_Backend/scripts/: commitizen.py  postinstall.py
UniThrift_Backend/tests/test_routes/: test_admin_analytics_routes.py  test_admin_routes.py  test_history_routes.py  test_item_categories.py  test_listing_routes.py  test_queueing.py  test_student_routes.py
(+132 files in other folders)
